--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,12 @@ github_username:  juliakastner
 
 # Build settings
 markdown: kramdown
-theme: tactile
+#theme: tactile
+remote_theme: pages-themes/tactile@v0.2.0
+
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -40,6 +43,4 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-remote_theme: pages-themes/tactile@v0.2.0
-plugins:
-- jekyll-remote-theme
+
