typo in publications yml

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -58,7 +58,7 @@
   proceedings: Not yet published
   fullversion_link: https://eprint.iacr.org/2019/1018
 - authors: Julia Kastner, Alexander Koch, Stefan Walzer, Daiki Miyahara, Yu-ichi Hayashi, Takaaki Mizuki, and Hideaki Sone
-  title: The Minimum Number of Cards in Practical Card-Based  rotocols
+  title: The Minimum Number of Cards in Practical Card-Based Protocols
   proceedings: ASIACRYPT 2017
   conference_link: https://link.springer.com/chapter/10.1007/978-3-319-70700-6_5
   fullversion_link: https://eprint.iacr.org/2017/863
