--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 - authors: Julia Kastner, Ky Nguyen, and Michael Reichle
   title : Pairing-Free Blind Signatures from Standard Assumptions in the ROM
-  proceedings: Not yet published
+  proceedings: CRYPTO 2024
   fullversion_link: https://eprint.iacr.org/2023/1810
 
 - authors: Dennis Hofheinz, Julia Kastner, Akin Ünal, and Bogdan Ursu
